--- a/DataDashboard_Streamlit/requirements.txt
+++ b/DataDashboard_Streamlit/requirements.txt
@@ -1,7 +1,7 @@
-seaborn
-pandas
-altair
-matplotlib
-numpy
-streamlit
-scipy
+seaborn==0.13.2
+pandas==2.2.2
+altair==5.0.1
+matplotlib==3.8.4
+numpy==1.26.4
+streamlit==1.32.0
+scipy==1.13.1
